--- a/index.html
+++ b/index.html
@@ -1,98 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Faith & IT Portfolio | Jaures Dominique</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f9fafb; color: #1f2937; }
-    header { background: #0f172a; color: white; padding: 2rem; text-align: center; }
-    nav { background: #1e293b; padding: 1rem; text-align: center; }
-    nav a { color: #e5e7eb; margin: 0 1rem; text-decoration: none; font-weight: bold; }
-    section { padding: 3rem; max-width: 900px; margin: auto; }
-    h2 { color: #0f172a; border-bottom: 2px solid #e5e7eb; padding-bottom: 0.5rem; }
-    footer { background: #0f172a; color: white; text-align: center; padding: 1.5rem; }
-    .card { background: white; padding: 2rem; margin: 2rem 0; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kouadio Jean-Jaures Dominique N’GUESSAN | IT Professional & Disciple-Leader</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.6;
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+            color: #222;
+        }
+        h1, h2, h3 {
+            color: #2c3e50;
+        }
+        h1 {
+            border-bottom: 2px solid #ccc;
+            padding-bottom: 10px;
+        }
+        hr {
+            margin: 30px 0;
+        }
+        ul {
+            margin-left: 20px;
+        }
+    </style>
 </head>
 <body>
 
-<header>
-  <h1>Faith & Information Technology Portfolio</h1>
-  <p>"Anxiously engaged in a good cause" — Doctrine & Covenants 58:27</p>
-  <p><strong>Jaures Dominique</strong> | Network Administration & IT Systems</p>
-</header>
+<h1>Kouadio Jean-Jaures Dominique N’GUESSAN</h1>
+<h2>Information Technology Professional & Disciple-Leader</h2>
 
-<nav>
-  <a href="#home">Home</a>
-  <a href="#spiritual">Spiritual Journey</a>
-  <a href="#professional">Professional Growth</a>
-  <a href="#projects">Projects</a>
-  <a href="#ethics">Ethics</a>
-</nav>
+<p>
+Welcome to my professional and spiritual portfolio. This site represents the integration of my technical
+development in Information Technology with my growth as a disciple of Jesus Christ. Inspired by Elder
+David A. Bednar’s analogy of intertwined strands, this portfolio reflects how faith, principles, and
+professional practice work together to create strength, purpose, and integrity.
+</p>
 
-<section id="home">
-  <h2>Introduction</h2>
-  <div class="card">
-    <p>This portfolio represents my academic, professional, and spiritual journey as a student of Information Technology and a disciple of Jesus Christ. It reflects how my faith informs my work ethic, leadership style, and commitment to ethical decision-making in the IT field.</p>
-  </div>
-</section>
+<p>
+My goal is to become a trusted IT professional in networking and systems administration while living values
+of integrity, diligence, accountability, and service. This portfolio is a living document that will continue
+to grow as I learn, serve, and develop professionally.
+</p>
 
-<section id="spiritual">
-  <h2>Spiritual Portfolio</h2>
-  <div class="card">
-    <h3>Key Spiritual Anchors</h3>
-    <ul>
-      <li><strong>Doctrine & Covenants 58:27–28:</strong> A reminder that growth requires initiative and righteous action.</li>
-      <li><strong>Proverbs 3:5–6:</strong> Trusting the Lord in decision-making, especially in complex technical environments.</li>
-      <li><strong>David A. Bednar — Gather Together in One:</strong> Reinforced the importance of unity, purpose, and alignment with Christ.</li>
-      <li><strong>Temple Reflection:</strong> The temple as a place of alignment between professional goals and eternal purpose.</li>
-      <li><strong>Personal Insight:</strong> Technology is a stewardship; integrity defines its impact.</li>
-    </ul>
-    <p>These items mark milestones in my spiritual growth and guide my conduct as a future IT professional.</p>
-  </div>
-</section>
+<hr>
 
-<section id="professional">
-  <h2>Professional Portfolio</h2>
-  <div class="card">
-    <h3>Focus Areas</h3>
-    <ul>
-      <li>Network Administration (Routing, Switching, VLANs)</li>
-      <li>Linux & Windows Server Administration</li>
-      <li>Cybersecurity Fundamentals</li>
-      <li>SQL & Data Analysis</li>
-    </ul>
-    <p>My goal is to demonstrate technical competence while embodying Christlike leadership, accountability, and service.</p>
-  </div>
-</section>
+<h2>Spiritual Progression Portfolio</h2>
 
-<section id="projects">
-  <h2>Selected Projects</h2>
-  <div class="card">
-    <ul>
-      <li>Packet Tracer Network Design Projects (Static & Dynamic Routing)</li>
-      <li>Linux System Auditing & Log Management</li>
-      <li>SQL Data Analysis Projects</li>
-      <li>Ethical IT Case Study Analysis</li>
-    </ul>
-  </div>
-</section>
+<h3>Guiding Principle 1: Faith in Jesus Christ as the Source of Peace and Direction</h3>
 
-<section id="ethics">
-  <h2>Ethical Dilemma in IT</h2>
-  <div class="card">
-    <h3>Misuse of Administrative Privileges</h3>
-    <p><strong>What happened:</strong> A system administrator accessed confidential user data without authorization.</p>
-    <p><strong>Who was involved:</strong> The administrator, company leadership, and affected users.</p>
-    <p><strong>Initial response:</strong> Access was revoked, an internal audit launched, and security policies reinforced.</p>
-    <p><strong>Reflection:</strong> This case highlights the need for integrity, accountability, and spiritual self-governance in IT roles of trust.</p>
-  </div>
-</section>
+<p>
+Faith in Jesus Christ is the foundation of my personal and professional life. Through prayer, scripture study,
+and reflection, I have learned that true peace comes from trusting the Savior, even during uncertainty and
+pressure. In the IT field, challenges such as system failures, complex troubleshooting, and time constraints
+are common. Faith allows me to approach these challenges calmly, patiently, and with confidence that the
+Lord can guide my efforts.
+</p>
 
-<footer>
-  <p>© 2026 Jaures Dominique | Built with purpose, faith, and integrity</p>
-</footer>
+<strong>Supporting Materials:</strong>
+<ul>
+    <li>3 Nephi 13:19–22</li>
+    <li><em>Jesus Christ: The Prince of Peace</em></li>
+    <li>Personal spiritual reflections</li>
+</ul>
+
+<hr>
+
+<h3>Guiding Principle 2: Integrity and Accountability Through Agency</h3>
+
+<p>
+Agency is a divine gift that carries responsibility. Doctrine and Covenants 58:27–28 teaches that we are
+agents unto ourselves and accountable for our choices. In Information Technology, integrity is essential
+because professionals are entrusted with sensitive systems and data. I am committed to acting ethically,
+respecting boundaries, and using access responsibly, even when misuse could go unnoticed.
+</p>
+
+<strong>Supporting Materials:</strong>
+<ul>
+    <li>Doctrine and Covenants 58:27–28</li>
+    <li>Assigned course reading on agency and values</li>
+    <li>Ethical reflections from academic and professional experiences</li>
+</ul>
+
+<hr>
+
+<h3>Guiding Principle 3: Diligence and Reverence in Responsibilities</h3>
+
+<p>
+Reverence and diligence apply not only to sacred spaces but also to professional responsibilities. Through
+temple teachings and service, I have learned that preparation, consistency, and gratitude lead to growth.
+This principle motivates me to value learning opportunities, approach work with respect, and remain
+committed to continuous improvement.
+</p>
+
+<strong>Supporting Materials:</strong>
+<ul>
+    <li><em>Don’t Take the Temple for Granted</em></li>
+    <li><em>Blessings of the Temple</em></li>
+    <li>Personal insights from service</li>
+</ul>
+
+<hr>
+
+<h2>Professional Growth Portfolio</h2>
+
+<h3>Professional Introduction</h3>
+
+<p>
+I am an Information Technology student at Ensign College pursuing a Bachelor of Applied Science in IT. My
+professional interests include networking, systems administration, and ethical technology practices. I have
+gained hands-on experience through academic projects, certifications, and service-oriented leadership
+roles. My faith guides how I work, lead, and make decisions, shaping me into a responsible and trustworthy
+IT professional.
+</p>
+
+<hr>
+
+<h3>Résumé Summary</h3>
+
+<p><strong>Education</strong></p>
+<ul>
+    <li>Associate of Science in Information Technology</li>
+    <li>Bachelor of Applied Science in Information Technology (in progress), Ensign College</li>
+</ul>
+
+<p><strong>Certifications</strong></p>
+<ul>
+    <li>Network Pro Certification</li>
+    <li>Hybrid Server Pro Core</li>
+    <li>Client Pro Certificate</li>
+    <li>Technical Support Engineer Certificate</li>
+</ul>
+
+<p><strong>Technical Skills</strong></p>
+<ul>
+    <li>Networking (Cisco, Packet Tracer, routing protocols)</li>
+    <li>Windows Server and Linux administration</li>
+    <li>Hardware troubleshooting</li>
+    <li>Cloud fundamentals (AWS)</li>
+    <li>Professional documentation and communication</li>
+</ul>
+
+<p><strong>Leadership & Service</strong></p>
+<ul>
+    <li>Full-time missionary service</li>
+    <li>Temple worker and coordinator</li>
+</ul>
+
+<hr>
+
+<h3>Projects and Experience</h3>
+
+<h4>Network Configuration and Troubleshooting</h4>
+<p>
+Configured routers, switches, VLANs, DHCP, and DNS using Cisco Packet Tracer. This project strengthened
+my understanding of network design and reinforced the importance of precision, patience, and accountability.
+</p>
+
+<h4>Server Administration and User Support</h4>
+<p>
+Supported system access, resolved user issues, and maintained system reliability. This experience highlighted
+the importance of ethical responsibility and trust in system administration roles.
+</p>
+
+<h4>IT Support and Customer Service Integration</h4>
+<p>
+Provided technical support while communicating clearly with users. This experience taught me that empathy
+and service are essential components of effective IT work.
+</p>
+
+<hr>
+
+<h2>Ethics and Leadership</h2>
+
+<h3>Ethical Dilemma: Misuse of Administrative Privileges</h3>
+
+<p>
+System administrators often have elevated access to sensitive data and systems. An ethical dilemma arises
+when such access is used for purposes outside professional responsibility. While organizations may respond
+through audits and disciplinary actions, ethical behavior ultimately depends on individual integrity.
+</p>
+
+<p>
+This dilemma reinforced my belief that agency and values must guide technical ability. As a disciple of Jesus
+Christ, I am accountable for how I use entrusted authority, both professionally and spiritually.
+</p>
+
+<hr>
+
+<h2>Reflection: Spiritual and Professional Integration</h2>
+
+<p>
+Serving as a temple worker and coordinator taught me the power of preparation and reverence. Arriving early
+to meditate and invite the Spirit brought peace, joy, and a stronger desire to serve others. This experience
+shaped how I lead, prepare, and interact with others professionally.
+</p>
+
+<p>
+My spiritual discipline strengthens my professional conduct, and my professional growth deepens my
+spiritual maturity. When faith, effort, and integrity are aligned, they form a strong foundation for lifelong
+growth.
+</p>
+
+<hr>
+
+<h2>Future Direction</h2>
+
+<p>
+I am committed to continued learning, ethical leadership, and service-oriented technology practice. This
+portfolio will continue to evolve as I gain experience, pursue advanced certifications, and grow as both an
+IT professional and disciple-leader.
+</p>
 
 </body>
 </html>
