--- a/index.html
+++ b/index.html
@@ -207,7 +207,55 @@ growth.
 
 <hr>
 
-<h2>Future Direction</h2>
+<section id="week4-reflection">
+  <h2>Network Administration Project – Reflection</h2>
+
+  <p>
+    The Network Configuration and Systems Administration project represents a
+    meaningful application of the technical and ethical principles developed
+    throughout my coursework. The project demonstrates practical skills in
+    configuring network infrastructure, managing core services such as DHCP and
+    DNS, and ensuring reliable connectivity across systems. More importantly, it
+    reflects my growing understanding of how technical decisions directly affect
+    security, trust, and long-term system sustainability.
+  </p>
+
+  <p>
+    One of the key challenges addressed during refinement was improving clarity,
+    scalability, and maintainability. While the original configuration met
+    functional requirements, the project was strengthened through clearer
+    documentation and improved structural organization. These refinements ensure
+    the system can be easily understood and maintained by other administrators,
+    reducing operational risk and supporting long-term continuity.
+  </p>
+
+  <p>
+    Ethical considerations were intentionally integrated through improved access
+    control and accountability. Administrative privileges were refined to align
+    with the principle of least privilege, ensuring users only have access
+    necessary for their responsibilities. Documentation practices were also
+    enhanced to promote transparency, traceability, and responsible system
+    management.
+  </p>
+
+  <p>
+    These refinements had a direct impact on both technical quality and ethical
+    alignment. The system became more secure, scalable, and maintainable, while
+    also reflecting professional responsibility and trustworthiness. This
+    project demonstrates how ethical leadership in IT is expressed through
+    everyday configuration and design decisions.
+  </p>
+
+  <p>
+    Overall, this experience strengthened my ability to approach IT work with
+    intentionality, discipline, and accountability. It reinforced the idea that
+    effective technology solutions require both technical expertise and ethical
+    awareness, preparing me to serve organizations and communities responsibly
+    through technology.
+  </p>
+</section>
+    
+    <h2>Future Direction</h2>
 
 <p>
 I am committed to continued learning, ethical leadership, and service-oriented technology practice. This
